# Neural-Network-Learning

./: .gitignore  CMakeLists.txt  README.md  layers.py  main.py
include/: dense_layer.h  softmax_categorical_crossentropy.h
include/Activation_Functions/: ReLU.h  Softmax.h
include/Loss_Functions/: categorical_crossentropy.h  loss.h
include/SIMD_Ops/: array_ops.h
jupyter-notebooks/: NN1.ipynb
nn_py/: accuracy.py  data.py  layers.py  losses.py  main.py  model.py  optimizers.py
src/: dense_layer.cpp  main.cpp
src/Activation_Functions/: ReLU.cpp  Softmax.cpp
src/Loss_Functions/: categorical_crossentropy.cpp  loss.cpp
src/SIMD_Ops/: array_ops.cpp
